--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ AbstractPlutoDingetjes = "6e696c72-6542-2067-7265-42206c756150"
 
 [compat]
 julia = "1.9"
+AbstractPlutoDingetjes = "1.2"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
