--- a/Project.toml
+++ b/Project.toml
@@ -5,13 +5,16 @@ version = "0.1.1"
 
 [deps]
 AbstractPlutoDingetjes = "6e696c72-6542-2067-7265-42206c756150"
+Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
+REPL = "3fa0cd96-eef1-5676-8a61-b3b8758bbffb"
 
 [compat]
-julia = "1.9"
 AbstractPlutoDingetjes = "1.2"
+julia = "1.9"
 
 [extras]
+JuliaInterpreter = "aa1ae85d-cabe-5617-a682-6adf51b2e16a"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["Test", "JuliaInterpreter"]
