--- a/Project.toml
+++ b/Project.toml
@@ -5,12 +5,17 @@ version = "0.2.0"
 
 [deps]
 AbstractPlutoDingetjes = "6e696c72-6542-2067-7265-42206c756150"
+ExpressionExplorer = "21656369-7473-754a-2065-74616d696c43"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
 REPL = "3fa0cd96-eef1-5676-8a61-b3b8758bbffb"
 
 [compat]
 AbstractPlutoDingetjes = "1.2"
+ExpressionExplorer = "1"
+InteractiveUtils = "1.9"
+Markdown = "1.9"
+REPL = "1.9"
 julia = "1.9"
 
 [extras]
